--- a/encoder.html
+++ b/encoder.html
@@ -24,6 +24,6 @@
       </div>
     </div>
   </div>
-  <script src="encode.js"></script>
+  <script src="assets/js/encode.js"></script>
 </body>
 </html>
