--- a/collection/index.html
+++ b/collection/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Prompt Desk</title>
+  <title>Collection Hall</title>
 
 </head>
 
 <body class="bg-gradient-to-br from-pink-500 via-purple-500 to-cyan-500 min-h-screen">
-  <div class="bg-[url('../assets/img/bg01.png')] w-full bg-no-repeat bg-contain bg-center bg-top">
+  <div class="bg-[url('../assets/img/bg01.png')] w-full bg-no-repeat bg-contain bg-top">
     <nav class="bg-gray-800">
       <div class="mx-auto max-w-full px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
@@ -41,17 +41,19 @@
             </button>
           </div>
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-            <div class="flex flex-shrink-0 items-center">
-              <img class="block h-8 w-auto lg:hidden" src="../assets/img/promptbros_signature_c_white.svg" alt="PromtBros">
-              <img class="hidden h-8 w-auto lg:block" src="../assets/img/promptbros_signature_c_white.svg" alt="PromtBros">
-            </div>
+            <a href="/" class="flex flex-shrink-0 items-center">
+              <img class="block h-8 w-auto lg:hidden" src="../assets/img/promptbros_signature_c_white.svg"
+                alt="PromtBros">
+              <img class="hidden h-8 w-auto lg:block" src="../assets/img/promptbros_signature_c_white.svg"
+                alt="PromtBros">
+            </a>
             <div class="hidden sm:ml-6 sm:block">
               <div class="flex space-x-4">
-                <a href="#"
-                  class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">Collections</a>
+                <a href="#" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">Collections</a>
 
                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                <a href="/prompt/" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+                <a href="/prompt/"
+                  class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                   aria-current="page">Prompt Desk</a>
               </div>
             </div>
@@ -63,32 +65,29 @@
       <div class="sm:hidden" id="mobile-menu">
         <div class="space-y-1 px-2 pb-3 pt-2">
           <a href="#"
-            class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Team</a>
+            class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Collections</a>
 
           <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-          <a href="#" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium"
+          <a href="/prompt/" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium"
             aria-current="page">Prompt Desk</a>
         </div>
       </div>
     </nav>
 
-
     <div class="container mx-auto px-8 py-4">
       <div class="p-12">
         <h1 class="text-white text-2xl font-bold mb-6">Collections Hall</h1>
-        <label for="url-input" class="block text-sm text-white font-semibold mb-2">Please, enter your access code:</label>
-        <input type="url" id="url-input" class="w-full p-2 border mb-6" placeholder="Enter your Collection access code here"
-          value="">
+        <label for="url-input" class="block text-sm text-white font-semibold mb-2">Please, enter your access
+          code:</label>
+        <input type="url" id="url-input" class="w-full p-2 border mb-6"
+          placeholder="Enter your Collection access code here" value="">
       </div>
-      <div class="p-12 bg-white p-12 rounded-lg shadow-md">
+      <div class="p-12 bg-white rounded-lg shadow-md">
         <div id="group-list" class="grid grid-cols-1 gap-8"></div>
       </div>
     </div>
   </div>
   <script src="../assets/js/plp.js"></script>
-
-  
-
 </body>
 
 </html>
