--- a/prompt/index.html
+++ b/prompt/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../assets/css/github-markdown-light.css" type="text/css">
   <title>Prompt Desk</title>
 
 </head>
@@ -41,10 +42,10 @@
             </button>
           </div>
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-            <div class="flex flex-shrink-0 items-center">
+            <a  href="/" class="flex flex-shrink-0 items-center">
               <img class="block h-8 w-auto lg:hidden" src="../assets/img/promptbros_signature_c_white.svg" alt="PromtBros">
               <img class="hidden h-8 w-auto lg:block" src="../assets/img/promptbros_signature_c_white.svg" alt="PromtBros">
-            </div>
+            </a>
             <div class="hidden sm:ml-6 sm:block">
               <div class="flex space-x-4">
                 <a href="/collection/"
@@ -89,77 +90,6 @@
   <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.8/dist/clipboard.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="../assets/js/pdp.js"></script>
-
-  <style>
-    .markdown {
-      font-size: 1rem;
-      padding: 1%;
-    }
-
-    .markdown h1,
-    .markdown h2,
-    .markdown h3,
-    .markdown h4,
-    .markdown h5,
-    .markdown h6 {
-      font-family: 'Poppins', sans-serif;
-      margin-top: 1rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .markdown h1 {
-      font-size: 1.6rem;
-    }
-
-    .markdown h2 {
-      font-size: 1.4rem;
-    }
-
-    .markdown h3 {
-      font-size: 1.2rem;
-    }
-
-    .markdown h4 {
-      font-size: 1.1rem;
-    }
-
-    .markdown h5 {
-      font-size: 0.9rem;
-    }
-
-    .markdown h6 {
-      font-size: 0.7875rem;
-    }
-
-    .markdown p {
-      margin-bottom: 1rem;
-      line-height: 1.5;
-    }
-
-    .markdown ul {
-      margin-bottom: 1rem;
-      padding-left: 1.25rem;
-      list-style-type: disc;
-    }
-
-    .markdown ol {
-      margin-bottom: 1rem;
-      padding-left: 1.25rem;
-      list-style-type: decimal;
-    }
-
-    .markdown li {
-      margin-bottom: 0.5rem;
-    }
-
-    .markdown code {
-      font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-      font-size: 0.875rem;
-      background-color: #f1f1f1;
-      padding: 0.2rem 0.4rem;
-      border-radius: 0.25rem;
-    }
-  </style>
 
 </body>
 
